fix nesting issue with hover state on primary nav, wrapped mobile-menu.js in DOMContentloaded listener to wait for DOM to populate

--- a/themes/utg-2019/sass/_header.scss
+++ b/themes/utg-2019/sass/_header.scss
@@ -232,7 +232,14 @@
   .nav-links {
     .nav-menu {
       li {
-        position: relative;
+        &:nth-child(1) {
+          position: relative;
+          &:hover {
+            .sub-menu {
+              display: flex;
+            }
+          }
+        }
       }
       .sub-menu {
         display: none;
@@ -261,11 +268,6 @@
             font-size: 0.75rem;
             text-transform: capitalize;
           }
-        }
-      }
-      &:hover {
-        .sub-menu {
-          display: flex;
         }
       }
     }
